--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         const age = document.getElementById('age').value;
 
         const person = {
-            firstName: firstName,
-            lastName: lastName,
-            age: age
+            firstName: Federica,
+            lastName: Prinzi,
+            age: 24,
         };
 
         const formElement = document.querySelector('form');
